# project-4-calibration-VR

./: Aruco.cpp  CMakeLists.txt  camera_params.xml  extensions.cpp  extensions.h  harris_corners.cpp  main.cpp  operations.cpp  operations.h  readme.txt  references.txt  vir_reality.cpp
aruco-3.1.12/utils/: CMakeLists.txt
